# UFWInspector

./: PACKAGING.md  README.md  SUMMARY.md  pyproject.toml
debian/: changelog  control  copyright  rules  ufwinspector.desktop  ufwinspector.install
tests/: test_parser.py  test_tsv_output.py
ufwinspector/: __init__.py  cli.py  config.py
ufwinspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ufwinspector/core/: __init__.py  analyzer.py  geo.py  parser.py
ufwinspector/ui/: __init__.py  console.py
